--- a/exercise0/index.html
+++ b/exercise0/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+<script src="main.js"></script>
+
 </head>
+
 <body>
     <h1>Squares fucntion</h1>
-    <p id="displayText"> </p>
+    <p id="displayText">hello World!</p>
 </body>
+
+
 </html>
