--- a/exercise0/index.html
+++ b/exercise0/index.html
@@ -6,13 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-<script src="main.js"></script>
+<script src="main.js" defer></script>
 
 </head>
 
 <body>
     <h1>Squares fucntion</h1>
-    <p id="displayText">hello World!</p>
+    <div id="displayText">  </div>
+<button>go</button>
+
 </body>
 
 
