--- a/final/index.html
+++ b/final/index.html
@@ -5,14 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Morse Code</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.js"></script>
+    <script src="sketch.js"></script>
 </head>
 <body>
-    <header class="main-header">
+    <header class="main-header" id="mainHeader">
         <div class="container">
             <h1>MORSE <span class="code">CODE</span></h1>
             <nav class="navigation">
                 <ul>
-                    <li id="main-text">Main</li>
+                    <li class="active">Main</li>
                     <li><a href="#resources">Resources</a></li>
                     <li><a href="#chat">Chat</a></li>
                 </ul>
@@ -20,6 +22,9 @@
         </div>
     </header>
     <main>
+        <button id="restartButton">Restart</button>
+
+
         <section class="container">
             <h2 class="small-title">What is Morse Code</h2>
             <p>
@@ -29,7 +34,7 @@
         </section>
         
         <!-- 翻译器 Section -->
-        <section id="translator-section" class="translator-section">
+        <section class="translator-section">
             <div class="container">
                 <h2>Morse Code Translator</h2>
                 <p>Translate text to Morse code or Morse code to text with ease.</p>
@@ -39,12 +44,12 @@
                 </div>
                 <div class="translator-box">
                     <div class="input-box">
-                        <label for="inputText" id="inputLabel">Enter Text:</label>
-                        <textarea id="inputText" placeholder="Type here..."></textarea>
+                        <label for="inputText" class="input-label">Input</label>
+                        <textarea id="inputText" placeholder="Enter your text or Morse code..."></textarea>
                     </div>
                     <div class="output-box">
-                        <label for="outputText">Translated Result:</label>
-                        <textarea id="outputText" readonly></textarea>
+                        <label for="outputText" class="output-label">Output</label>
+                        <textarea id="outputText" placeholder="Your translation will appear here..." readonly></textarea>
                     </div>
                 </div>
                 <div class="action-buttons">
@@ -54,6 +59,7 @@
                 </div>
             </div>
         </section>
+        
 
         <!-- 规则 Section -->
         <section class="rules">
@@ -72,6 +78,8 @@
             <p>&copy; 2024 Morse Code Learning</p>
         </div>
     </footer>
-    <script src="script.js"></script>
+
+  
+    <script src="main.js"></script>
 </body>
 </html>
