--- a/midterm/index.html
+++ b/midterm/index.html
@@ -12,9 +12,9 @@
             <img class="menu" src="images/menu.png" alt="menu button icon">
             <div class="logo">Michael's website</div>
             <ul class="nav-links">
-                <li><a href="#highlights">Highlights</a></li>
-                <li><a href="#hobbies">Hobbies</a></li>
-                <li><a href="#scores">Scores</a></li>
+                <li id="highlightmoments"><a href="#highlight">Highlight</a></li>
+                <li id="Hobbies"><a href="#hobbies">Hobbies</a></li>
+                <li id="Scores"><a href="#scores">Scores</a></li>
             </ul>
             <button class="contact-button">Contact Me</button>
         </nav>
@@ -24,7 +24,7 @@
         <div class="profile">
             <img src="./images/me.jpg" alt="Michael's photo" >
             <div class="info">
-                <h2>Nice to Meet You~</h2>
+                <h1>Nice to Meet You~</h1       qq>
                 <p><strong>Age:</strong> 10</p>
                 <p><strong>Name:</strong> Michael Qi</p>
                 <p><strong>School:</strong> Beijing financial street runze school</p>
@@ -88,7 +88,7 @@
     </section>
 
     <section id="highlights">
-        <h3>Highlights</h3>
+        <h2>Highlights</h2>
         <div class="gallery">
             <div class="gallery-item"><img src="images/el.JPG" alt="Highlight 1"></div>
             <div class="gallery-item"><img src="images/he.JPG" alt="Highlight 2"></div>
